--- a/estilo.css
+++ b/estilo.css
@@ -79,6 +79,13 @@ h1 {
   padding: 2em 2em 2em 2em;
   border-radius: 8px;
 }
+
+#opciones-historial {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  flex-direction: row-reverse;
+}
 #formulario-producto {
   margin: 0em 0em 0em 0em;
   padding: 0em 0em 0em 0em;
@@ -127,6 +134,11 @@ td {
   text-align: center;
   border: 1px solid #ccc;
 }
+input#search-input {
+  margin: 0em 0em 0em 0em;
+  
+  width: 45%;
+}
 
 button#finalizar-compra {
   
@@ -166,11 +178,14 @@ button#borrar-compra {
 /* Estilo para el botón "Buscar" */
 #search-button {
   background-color: #0fc1e0;
+  margin: 1em 1em 1em 1em;
+
 }
 
 /* Estilo para el botón "Mostrar Todos" */
 #show-all-button {
   background-color: #0fc1e0;
+  margin: 1em 1em 1em 1em;
 }
 
 #guardar {
@@ -201,7 +216,12 @@ hr {
   background-color: #ccc;
   border: none;
 }
-
+.busqueda {
+  margin: 0em 0em 0em 0em;
+  padding: 1em 0em 1em 1em;
+  display: flex;
+  align-items: center;
+}
 .copyright {
   text-align: right;
   color: #ccc;
@@ -248,10 +268,15 @@ hr {
     flex-wrap: wrap;
     justify-content: center;
 }
-  .busqueda {
-    margin: 0em 0em 0em 0em;
-    padding: 1em 0em 1em 1em;
-  }
+.busqueda {
+  margin: 0em 0em 0em 0em;
+  padding: 0em 0em 0em 0em;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-content: center;
+  justify-content: space-around;
+}
 
 
   #vendido-actual {
@@ -269,7 +294,11 @@ hr {
     flex-wrap: wrap;
     justify-content: space-evenly;
   }
-
+  #opciones-historial {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
   #formulario-producto {
     margin: 0em 0em 0em 0em;
     padding: 0em 0em 0em 0em;
@@ -284,15 +313,14 @@ hr {
     font-weight: bold;
   }
 
-  input[type=text],
-  input[type=number] {
+  input[type=text], input[type=number] {
     padding: 10px;
-    width: 92%;
+    /* width: 92%; */
     margin-bottom: 10px;
-    border: 1px solid #ccc;
+    border: 0px solid #ccc;
     border-radius: 5px;
     font-size: 1em;
-  }
+}
 
   button {
     background-color: rgb(0, 0, 0);
@@ -320,7 +348,10 @@ hr {
     border: 1px solid #ccc;
   }
 
-
+  input#search-input {
+    margin: 0em 0em 0em 0em;
+    width: 88%;
+}
   button#finalizar-compra {
     
     margin: 1em 1em 1em 1em;
