--- a/estilo.css
+++ b/estilo.css
@@ -107,6 +107,7 @@ input[type=text], input[type=number] {
   border: 0px solid #ccc;
   border-radius: 5px;
   font-size: 1em;
+  outline: none;
 }
 
 button {
@@ -461,6 +462,7 @@ hr {
 .modal-content {
   background-color: #fefefe;
   margin: 15% auto;
+  height: 90%;
   padding: 20px;
   border: 1px solid #888;
   width: 80%;
