--- a/estilo.css
+++ b/estilo.css
@@ -54,12 +54,12 @@ h1 {
   background-color: rgb(226, 226, 226);
   padding: 0em 2em 1em 2em;
   border-radius: 8px;
+  width: 50%;
 }
-
 #compra_actual {
   display: flex;
   width: 100%;
-  margin: 0em 0em 0em 0em;
+  margin: 0em 0em 1em 0em;
   background-color: rgb(226, 226, 226);
   padding: 1em 0em 1em 1em;
   border-radius: 8px;
@@ -71,10 +71,9 @@ h1 {
   font-size: 2em;
   margin: 1em 1em 1em 1em;
 }
-
 #historial {
   width: 100%;
-  margin: 0em 0em 0em 0em;
+  margin: 1em 0em 0em 0em;
   background-color: rgb(226, 226, 226);
   padding: 2em 2em 2em 2em;
   border-radius: 8px;
@@ -102,14 +101,13 @@ label {
 
 input[type=text], input[type=number] {
   padding: 10px;
-  /* width: 97%; */
+  width: 90%;
   margin-bottom: 10px;
   border: 0px solid #ccc;
   border-radius: 5px;
   font-size: 1em;
   outline: none;
 }
-
 button {
   background-color: rgb(0, 0, 0);
   color: rgb(226, 226, 226);
@@ -253,7 +251,8 @@ hr {
     background-color: rgb(226, 226, 226);
     padding: 0em 0em 0em 0em;
     border-radius: 8px;
-  }
+    width: 90%;
+}
 
   #compra_actual {
     display: flex;
@@ -289,7 +288,7 @@ hr {
   #historial {
     background-color: rgb(226, 226, 226);
     display: flex;
-    margin: 0em 0em 0em 0em;
+    margin: 3em 0em 0em 0em;
     padding: 0em 0em 0em 0em;
     border-radius: 8px;
     flex-wrap: wrap;
