--- a/estilo.css
+++ b/estilo.css
@@ -8,34 +8,6 @@ body {
   color: rgb(66, 66, 66);
 }
 
-.menu {
-  background-color: #073260;
-  color: #fff;
-}
-
-.menu ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-}
-
-.menu li {
-  float: left;
-}
-
-.menu li a {
-  display: block;
-  color: #fff;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-
-.menu li a:hover {
-  background-color: #091725;
-}
-
 h1 {
   text-align: center;
 }
@@ -118,8 +90,8 @@ button {
 }
 
 table {
-  margin: 2em 2em 2em 2em;
-  padding: 2em 2em 2em 2em;
+  margin: 0em 0em 0em 0em;
+  padding: 0em 0em 0em 0em;
   border-collapse: collapse;
   display: flex;
   justify-content: space-around;
@@ -163,7 +135,11 @@ button#borrar-compra {
 }
 
 
+button#subir-stock{
+  background-color: #000000;
 
+  margin: 1em 1em 1em 1em;
+}
 
 
 
@@ -186,14 +162,23 @@ button#borrar-compra {
 }
 #exportar-stock-xlsx {
   background-color: #02861f;
-  margin: 1em 1em 1em 1em;
-  float: right;
+  margin: 0em 1em 0em 1em;
+  float: none;
 }
 
-.btn-eliminar {
-  background-color: red;
+#eliminar {
+  background-color: rgb(0, 0, 0);
   color: white;
 }
+
+
+#botones-tabla-modal {
+  display: flex;
+  flex-direction: row;
+}
+
+
+
 
 h2 {
   float: left;
@@ -216,13 +201,18 @@ hr {
   display: flex;
   align-items: center;
 }
+
+
+
+
+
 .copyright {
   text-align: right;
   color: #ccc;
   margin: 1rem;
   padding: 1rem;
 }
-
+/*Diseño para Escritorio */
 @media screen and (max-width: 700px) {
   body {
     font-family: Arial, sans-serif;
@@ -332,7 +322,11 @@ hr {
     border-radius: 10px;
     cursor: pointer;
   }
-
+  #exportar-stock-xlsx {
+    background-color: #02861f;
+    margin: 0em 1em 0em 1em;
+    float: none;
+  }
   table {
     display: none;
     margin: 0em 0em 0em 0em;
@@ -345,7 +339,6 @@ hr {
 
   th,
   td {
-    font-size: 0.4em;
     text-align: center;
     border: 1px solid #ccc;
   }
@@ -394,13 +387,12 @@ hr {
 
 
 
-
-
-
-
-
-
-
+#botones-tabla-modal {
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  /* width: 100%; */
+}
 /* Estilos para el modal */
 .modal {
   display: none;
@@ -421,15 +413,20 @@ hr {
   padding: 20px;
   border: 1px solid #888;
   width: 80%;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .close {
   color: #aaa;
-  float: right;
+  display: flex;
+  width: 100%;
   font-size: 28px;
   font-weight: bold;
+  flex-direction: row-reverse;
 }
-
 .close:hover,
 .close:focus {
   color: black;
