--- a/estilo.css
+++ b/estilo.css
@@ -102,7 +102,7 @@ input[type=text], input[type=number] {
     outline: none;
 }
 button {
-  background-color: rgb(0, 0, 0);
+  background-color: #091725;
   color: rgb(226, 226, 226);
   padding: 10px 20px;
   border: none;
@@ -433,7 +433,7 @@ input#busqueda {
 }
 
   button {
-    background-color: rgb(0, 0, 0);
+    background-color: #091725;
     color: rgb(226, 226, 226);
     padding: 14px 26px;
     border: none;
@@ -512,7 +512,7 @@ input#busqueda {
   width: 100%;
   margin: 0em 0em 1em 0em;
   background-color: rgb(226, 226, 226);
-  padding: 1em 0em 1em 1em;
+  padding: 2em 0em 1em 0em;
   border-radius: 8px;
   flex-wrap: wrap;
 }
@@ -521,22 +521,23 @@ input#busqueda {
   width: 100%;
   margin: 0em 0em 1em 0em;
   background-color: rgb(226, 226, 226);
-  padding: 1em 0em 1em 1em;
+  /* padding: 1em 0em 1em 1em; */
   border-radius: 8px;
-  flex-wrap: wrap;
+  flex-direction: column;
 }
 
 #busqueda {
   display: flex;
-  width: 100%;
+  width: 90%;
   margin: 0em 0em 1em 0em;
   background-color: rgb(226, 226, 226);
   padding: 1em 0em 1em 1em;
   border-radius: 8px;
   flex-wrap: wrap;
+  flex-direction: column;
 }
 input#busqueda {
-  width: 100%;
+  width: 90%;
   margin: 0em 0em 1em 0em;
   background-color: rgb(226, 226, 226);
   padding: 0.5em 0.5em 0.5em 0.5em;
