--- a/estilo.css
+++ b/estilo.css
@@ -20,6 +20,7 @@ h1 {
   flex-wrap: wrap;
   background-color: #091725;
   border-radius: 8px;
+  flex-direction: row;
 }
 
 #ingresar_producto {
@@ -27,9 +28,19 @@ h1 {
   background-color: rgb(226, 226, 226);
   padding: 0em 2em 1em 2em;
   border-radius: 8px;
-  width: 50%;
+  width: 26%;
 }
 #compra_actual {
+  display: flex;
+  width: 64%;
+  margin: 0em 0em 1em 1em;
+  background-color: rgb(226, 226, 226);
+  padding: 1em 0em 1em 1em;
+  border-radius: 8px;
+  flex-wrap: wrap;
+  height: 7em;
+}
+#contenido-tabla {
   display: flex;
   width: 100%;
   margin: 0em 0em 1em 0em;
@@ -38,7 +49,6 @@ h1 {
   border-radius: 8px;
   flex-wrap: wrap;
 }
-
 #menu {
   display: flex;
   width: 100%;
@@ -54,7 +64,7 @@ h1 {
 #vendido-actual {
   font-size: 2em;
   width: 100%;
-  margin: 1em 1em 1em 1em;
+  margin: 0.5em 0em 0em 1em;
 }
 #historial {
   width: 100%;
@@ -359,6 +369,16 @@ input#busqueda {
   justify-content: center;
 }
 
+#contenido-tabla {
+  display: flex;
+  width: 100%;
+  margin: 0em 0em 0em 0em;
+  background-color: rgb(226, 226, 226);
+  padding: 0em 0em 0em 0em;
+  border-radius: 8px;
+  flex-wrap: wrap;
+  justify-content: center;
+}
 #menu {
   display: flex;
   width: 100%;
