--- a/estilo.css
+++ b/estilo.css
@@ -313,7 +313,7 @@ h2 {
 
 #bloque-productos {
   /* display: flex; */
-  /* width: 100%; */
+  width: 97%; 
   /* margin: 0em 0em 0em 0em; */
   background-color: rgb(226, 226, 226);
   padding: 1em 1em 1em 1em;
