--- a/estilo.css
+++ b/estilo.css
@@ -52,10 +52,11 @@ h1 {
   display: flex;
   margin: 0em 0em 1em 1em;
   background-color: rgb(226, 226, 226);
-  padding: 1em 0em 1em 1em;
+  padding: 1em 1em 1em 1em;
   border-radius: 8px;
   flex-wrap: wrap;
 }
+
 #menu {
   display: flex;
   width: 100%;
@@ -575,7 +576,7 @@ input#busqueda {
   width: 100%;
   margin: 0em 0em 1em 0em;
   background-color: rgb(226, 226, 226);
-  padding: 2em 0em 1em 0em;
+  padding: 1em 0em 1em 0em;
   border-radius: 8px;
   flex-wrap: wrap;
 }
@@ -633,7 +634,7 @@ input#busqueda {
   background-color: #fefefe;
   margin: 2%;
   height: auto;
-  padding: 20px;
+  padding: 10px;
   border: 1px solid #888;
   /* width: 100%; */
   border-radius: 10px;
@@ -641,6 +642,11 @@ input#busqueda {
   flex-direction: column;
   align-items: center;
   background: #091725;
+}
+
+
+#archivos{
+  padding:0em 0em 0em 2em;
 }
 
 }
