--- a/estilo.css
+++ b/estilo.css
@@ -379,6 +379,103 @@ input#busqueda {
   padding: 0em 0em 0em 0em;
 }
 
+#incremento {
+  display: flex;
+  width: 97%;
+  margin: 0em 0em 1em 0em;
+  background-color: rgb(226, 226, 226);
+  padding: 1em 1em 1em 1em;
+  border-radius: 8px;
+  flex-wrap: wrap;
+  align-items: center;
+  flex-direction: row;
+  justify-content: center;
+}
+
+input#valorIncremento {
+  margin: 0em 0em 0em 0.5em;
+  padding: 0.65em;
+  background-color: white;
+  border-radius: 5px;
+ 
+  width: auto;
+}
+
+select#tipoIncremento {
+  margin: 0em 1em 0em 0.5em;
+  padding: 1em 1em 1em 1em;
+  background-color: white;
+  border-radius: 5px;
+  width: auto;
+  outline: none;
+  border: 0px;
+  font-size:1em;
+}
+
+
+
+
+select#selectCategory{
+  margin: 1em;
+  padding: 1em 1em 1em 1em;
+  background-color: white;
+  border-radius: 5px;
+  width: 18em;
+  outline: none;
+  border: 0px;
+  font-size: 1em;
+}
+
+
+select#filtro {
+  margin: 1em;
+  padding: 0.4em;
+  background-color: white;
+  border-radius: 5px;
+  width: 11em;
+  outline: none;
+  border: 0px;
+  /* font-size: 1em; */
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -620,18 +717,29 @@ input#busqueda {
  
 }
 
+
+
+
+table#tabla-stock {
+  margin: 0em 0em 0em 0em;
+  padding: 0em 0em 0em 0em;
+  border-collapse: collapse;
+  border-radius: 5px;
+  font-size: 0.54em;
+}
+
 #bloque-productos {
-  /* display: flex; */
-  width: auto; 
-  /* margin: 0em 0em 0em 0em; */
-  background-color: rgb(226, 226, 226);
-  padding: 1em 1em 1em 1em;
-  border-radius: 8px;
-  /* height: 7em; */
-  flex-direction: row;
-  flex-wrap: wrap;
-  align-content: flex-end;
-  justify-content: center;
+    /* display: flex; */
+    /* width: 90%; */
+    /* margin: 0em 0em 0em 0em; */
+    background-color: rgb(226, 226, 226);
+    padding: 0em 0em 0em 0em;
+    border-radius: 8px;
+    /* height: 7em; */
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-content: flex-end;
+    justify-content: center;
 }
 
 
@@ -654,6 +762,54 @@ input#busqueda {
   padding:0em 0em 0em 2em;
 }
 
+
+
+#incremento {
+  display: flex;
+  width: auto;
+  margin: 0em 0em 0em 0em;
+  background-color: rgb(97 97 97);
+  padding: 1em 1em 1em 1em;
+  border-radius: 8px;
+  align-items: center;
+}
+select#tipoIncremento {
+  margin: 1em;
+  padding: 1em 1em 1em 1em;
+  background-color: white;
+  border-radius: 5px;
+  width: auto;
+  outline: none;
+  border: 0px;
+  font-size: 1em;
+}
+select#selectCategory{
+  margin: 1em;
+  padding: 1em 1em 1em 1em;
+  background-color: white;
+  border-radius: 5px;
+  width: auto;
+  outline: none;
+  border: 0px;
+  font-size: 1em;
+}
+select#filtro {
+  margin: 1em;
+  padding: 0.5em 0.5em 0.5em 0.5em;
+  background-color: white;
+  border-radius: 5px;
+  width: 18em;
+  outline: none;
+  border: 0px;
+  font-size: 1em;
+}
+input#valorIncremento {
+  margin: 0em 0em 0em 0em;
+  padding: 0.65em;
+  background-color: white;
+  border-radius: 5px;
+  width: auto;
+}
 }
 
 
