--- a/estilo.css
+++ b/estilo.css
@@ -40,7 +40,7 @@ h1 {
 }
 #compra_actual {
   display: flex;
- 
+   width: 98%;
   margin: 0em 0em 1em 1em;
   background-color: rgb(226, 226, 226);
   padding: 1em 0em 1em 1em;
@@ -438,7 +438,15 @@ select#filtro {
   /* font-size: 1em; */
 }
 
-
+select#formaPago {
+  margin: 1em;
+  padding: 0.4em;
+  background-color: white;
+  border-radius: 5px;
+  width: 11em;
+  outline: none;
+  border: 0px;
+}
 
 #total_pagar{
   font-size: 3em;
@@ -448,16 +456,53 @@ select#filtro {
 
 
 
+/* Estilo básico para el modal */
+.modalPago {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.7);
+}
+
+/* Estilo para la sección de contenido dentro del modal */
+.modal-content-Pago {
+  background-color: #e2e2e2;
+  margin: 2%;
+  height: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+/* Estilo para el botón de cierre del modal */
+.closePago {
+  color: #aaa;
+  display: flex;
+  width: 100%;
+  font-size: 28px;
+  font-weight: bold;
+  flex-direction: row-reverse;
+}
 
 
 
 
 
 
-
-
-
-
+.closePago:hover,
+.closePago:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
 
 
 
@@ -582,9 +627,14 @@ select#filtro {
     flex-direction: column;
 }
 
-  #botones-compra-actual {
+#botones-compra-actual {
   margin: 0em 0em 0em 0em;
-  }
+  display: flex;
+  align-content: center;
+  flex-wrap: wrap;
+  justify-content: center;
+  flex-direction: column;
+}
 
 
   label {
@@ -806,6 +856,17 @@ select#filtro {
   border: 0px;
   font-size: 1em;
 }
+
+select#formaPago {
+  margin: 1em;
+  padding: 0.5em 0.5em 0.5em 0.5em;
+  background-color: white;
+  border-radius: 5px;
+  width: 18em;
+  outline: none;
+  border: 0px;
+  font-size: 1em;
+}
 input#valorIncremento {
   margin: 0em 0em 0em 0em;
   padding: 0.65em;
@@ -819,6 +880,24 @@ input#valorIncremento {
   font-size: 3em;
   text-align: left;
 }
+
+
+
+
+#modal-content-Pago {
+  background-color: #fefefe;
+  margin: 2%;
+  height: auto;
+  padding: 10px;
+  border: 1px solid #888;
+  /* width: 100%; */
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: #091725;
+}
+
 }
 
 
