--- a/estilo.css
+++ b/estilo.css
@@ -435,7 +435,7 @@ select#filtro {
   width: 11em;
   outline: none;
   border: 0px;
-  /* font-size: 1em; */
+  font-size: 1em; 
 }
 
 select#formaPago {
@@ -510,6 +510,57 @@ select#formaPago {
 
 
 
+
+
+
+
+/* Estilo básico para el modal */
+.modalHistorialPagos {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.7);
+}
+
+/* Estilo para la sección de contenido dentro del modal */
+.contenido-modal-Historial-Pagos {
+  background-color: #e2e2e2;
+  margin: 2%;
+  height: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+/* Estilo para el botón de cierre del modal */
+.cerrarHistorialPagos {
+  color: #aaa;
+  display: flex;
+  width: 100%;
+  font-size: 28px;
+  font-weight: bold;
+  flex-direction: row-reverse;
+}
+
+
+
+
+
+
+.cerrarHistorialPagos:hover,
+.cerrarHistorialPagos:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
 
 
 
